discussion/kv_engine/154363/154363_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

wip

Change-Id: I3cc740c8d45303e022438a8f23cb728af5151156

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-26 09:47:09.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-26 09:59:44.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30805/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/logger/custom_rotating_file_sink.h:27:10:
fatal error: "spdlog/pattern_formatter.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30805/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9159/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.cc:39:31: error: no member named "payload" in "spdlog::details::log_msg" [clang-diagnostic-error]
    std::string msgString(msg.payload.begin(), msg.payload.end());
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.cc:39:52: error: no member named "payload" in "spdlog::details::log_msg" [clang-diagnostic-error]
    std::string msgString(msg.payload.begin(), msg.payload.end());
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:179:56: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
    void sink_it_(const spdlog::details::log_msg& msg) override;
                                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/spdlog/include/spdlog/logger.h:134:18: note: hidden overloaded virtual function "spdlog::logger::sink_it_" declared here: type mismatch at 1st parameter ("details::log_msg &" vs "const spdlog::details::log_msg &")
    virtual void sink_it_(details::log_msg &msg);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/objectregistry_test.cc:137:46: error: no member named "payload" in "spdlog::details::async_msg" [clang-diagnostic-error]
    const auto asyncMsgCapacity = sizeof(msg.payload) / 2;
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/custom_rotating_file_sink.h:27:10: error: "spdlog/pattern_formatter.h" file not found [clang-diagnostic-error]
#include <spdlog/pattern_formatter.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9159/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.cc:39:31:
error: no member named "payload" in "spdlog::details::log_msg" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9159/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36057/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\bucket_logger.h(179): error C3668: "BucketLogger::sink_it_": method with override specifier "override" did not override any base class methods ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36057/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9790/ : FAILURE

Compile error at [2021-05-26T09:48:53.970Z] ../kv_engine/engines/ep/src/bucket_logger.h:179:56:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9790/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11124/ : FAILURE

Compile error at [2021-05-26T09:48:35.260Z] ../kv_engine/engines/ep/src/bucket_logger.h:179:56:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11124/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10866/ : FAILURE

Compile error at [2021-05-26T09:48:36.520Z] ../kv_engine/engines/ep/src/bucket_logger.h:179:10:
error: ?void BucketLogger::sink_it_(const spdlog::details::log_msg&)? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10866/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10721/ : FAILURE

Compile error at [2021-05-26T09:48:21.219Z] ../kv_engine/logger/custom_rotating_file_sink.h:27:10:
fatal error: spdlog/pattern_formatter.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10721/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18679/ : FAILURE

Compile error at [2021-05-26T09:50:50.587Z] ../kv_engine/engines/ep/src/bucket_logger.h:179:56:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18679/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7730/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
